// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/badge.md extend context correctly 1`] = `
<div
  class="m-design-radio-group m-design-radio-group-solid"
>
  <span
    class="m-design-badge"
  >
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="1"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Click Me
      </span>
    </label>
    <sup
      class="m-design-scroll-number m-design-badge-count"
      data-show="true"
      title="1"
    >
      <span
        class="m-design-scroll-number-only"
        style="transition:none"
      >
        <span
          class="m-design-scroll-number-only-unit current"
        >
          1
        </span>
      </span>
    </sup>
  </span>
  <span
    class="m-design-badge"
  >
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="2"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Not Me
      </span>
    </label>
    <sup
      class="m-design-scroll-number m-design-badge-count"
      data-show="true"
      title="2"
    >
      <span
        class="m-design-scroll-number-only"
        style="transition:none"
      >
        <span
          class="m-design-scroll-number-only-unit current"
        >
          2
        </span>
      </span>
    </sup>
  </span>
  <span
    class="m-design-badge"
  >
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="3"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Not Me
      </span>
    </label>
    <sup
      class="m-design-scroll-number m-design-badge-count"
      data-show="true"
      title="3"
    >
      <span
        class="m-design-scroll-number-only"
        style="transition:none"
      >
        <span
          class="m-design-scroll-number-only-unit current"
        >
          3
        </span>
      </span>
    </sup>
  </span>
  <span
    class="m-design-badge"
  >
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="4"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Not Me
      </span>
    </label>
    <sup
      class="m-design-scroll-number m-design-badge-count"
      data-show="true"
      title="4"
    >
      <span
        class="m-design-scroll-number-only"
        style="transition:none"
      >
        <span
          class="m-design-scroll-number-only-unit current"
        >
          4
        </span>
      </span>
    </sup>
  </span>
</div>
`;

exports[`renders ./components/radio/demo/basic.md extend context correctly 1`] = `
<label
  class="m-design-radio-wrapper"
>
  <span
    class="m-design-radio"
  >
    <input
      class="m-design-radio-input"
      type="radio"
    />
    <span
      class="m-design-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disabled.md extend context correctly 1`] = `
Array [
  <label
    class="m-design-radio-wrapper m-design-radio-wrapper-disabled"
  >
    <span
      class="m-design-radio m-design-radio-disabled"
    >
      <input
        class="m-design-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="m-design-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <label
    class="m-design-radio-wrapper m-design-radio-wrapper-disabled"
  >
    <span
      class="m-design-radio m-design-radio-checked m-design-radio-disabled"
    >
      <input
        checked=""
        class="m-design-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="m-design-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked m-design-radio-button-disabled"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked m-design-radio-button-disabled"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked m-design-radio-button-disabled"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <br />,
  <button
    class="m-design-btn m-design-btn-primary"
    style="margin-top:16px"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>,
]
`;

exports[`renders ./components/radio/demo/radiobutton.md extend context correctly 1`] = `
Array [
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked m-design-radio-button-disabled"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiobutton-solid.md extend context correctly 1`] = `
Array [
  <div
    class="m-design-radio-group m-design-radio-group-solid"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiogroup.md extend context correctly 1`] = `
<div
  class="m-design-radio-group m-design-radio-group-inverse"
>
  <label
    class="m-design-radio-wrapper m-design-radio-wrapper-checked"
  >
    <span
      class="m-design-radio-mark m-design-radio-mark-checked"
    >
      <input
        checked=""
        class="m-design-radio-mark-input"
        type="radio"
        value="1"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        type="radio"
        value="2"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        type="radio"
        value="3"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        type="radio"
        value="4"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md extend context correctly 1`] = `
<div
  class="m-design-radio-group m-design-radio-group-inverse"
>
  <div
    class="m-design-space m-design-space-vertical"
  >
    <div
      class="m-design-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="m-design-radio-wrapper m-design-radio-wrapper-checked"
      >
        <span
          class="m-design-radio-mark m-design-radio-mark-checked"
        >
          <input
            checked=""
            class="m-design-radio-mark-input"
            type="radio"
            value="1"
          />
          <span
            class="m-design-radio-mark-inner"
          />
        </span>
        <span>
          Option A
        </span>
      </label>
    </div>
    <div
      class="m-design-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="m-design-radio-wrapper"
      >
        <span
          class="m-design-radio-mark"
        >
          <input
            class="m-design-radio-mark-input"
            type="radio"
            value="2"
          />
          <span
            class="m-design-radio-mark-inner"
          />
        </span>
        <span>
          Option B
        </span>
      </label>
    </div>
    <div
      class="m-design-space-item"
      style="margin-bottom:8px"
    >
      <label
        class="m-design-radio-wrapper"
      >
        <span
          class="m-design-radio-mark"
        >
          <input
            class="m-design-radio-mark-input"
            type="radio"
            value="3"
          />
          <span
            class="m-design-radio-mark-inner"
          />
        </span>
        <span>
          Option C
        </span>
      </label>
    </div>
    <div
      class="m-design-space-item"
    >
      <label
        class="m-design-radio-wrapper"
      >
        <span
          class="m-design-radio-mark"
        >
          <input
            class="m-design-radio-mark-input"
            type="radio"
            value="4"
          />
          <span
            class="m-design-radio-mark-inner"
          />
        </span>
        <span>
          More...
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md extend context correctly 1`] = `
Array [
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
  >
    <label
      class="m-design-radio-wrapper m-design-radio-wrapper-checked"
    >
      <span
        class="m-design-radio-mark m-design-radio-mark-checked"
      >
        <input
          checked=""
          class="m-design-radio-mark-input"
          type="radio"
          value="Apple"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="m-design-radio-wrapper"
    >
      <span
        class="m-design-radio-mark"
      >
        <input
          class="m-design-radio-mark-input"
          type="radio"
          value="Pear"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="m-design-radio-wrapper"
    >
      <span
        class="m-design-radio-mark"
      >
        <input
          class="m-design-radio-mark-input"
          type="radio"
          value="Orange"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
  >
    <label
      class="m-design-radio-wrapper m-design-radio-wrapper-checked"
    >
      <span
        class="m-design-radio-mark m-design-radio-mark-checked"
      >
        <input
          checked=""
          class="m-design-radio-mark-input"
          type="radio"
          value="Apple"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="m-design-radio-wrapper"
    >
      <span
        class="m-design-radio-mark"
      >
        <input
          class="m-design-radio-mark-input"
          type="radio"
          value="Pear"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="m-design-radio-wrapper m-design-radio-wrapper-disabled"
    >
      <span
        class="m-design-radio-mark m-design-radio-mark-disabled"
      >
        <input
          class="m-design-radio-mark-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="m-design-radio-mark-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="Orange"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-solid"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="Apple"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="Pear"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-disabled"
    >
      <span
        class="m-design-radio-button m-design-radio-button-disabled"
      >
        <input
          class="m-design-radio-button-input"
          disabled=""
          type="radio"
          value="Orange"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
]
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md extend context correctly 1`] = `
<div
  class="m-design-radio-group m-design-radio-group-inverse"
>
  <label
    class="m-design-radio-wrapper m-design-radio-wrapper-checked"
  >
    <span
      class="m-design-radio-mark m-design-radio-mark-checked"
    >
      <input
        checked=""
        class="m-design-radio-mark-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="m-design-radio-wrapper"
  >
    <span
      class="m-design-radio-mark"
    >
      <input
        class="m-design-radio-mark-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="m-design-radio-mark-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md extend context correctly 1`] = `
Array [
  <div
    class="m-design-radio-group m-design-radio-group-inverse m-design-radio-group-large"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-inverse"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-inverse m-design-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-solid m-design-radio-group-large"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-solid"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-solid m-design-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="m-design-radio-group m-design-radio-group-outline m-design-radio-group-large"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-outline"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
  <div
    class="m-design-radio-group m-design-radio-group-outline m-design-radio-group-small"
    style="margin-top:16px"
  >
    <label
      class="m-design-radio-button-wrapper m-design-radio-button-wrapper-checked"
    >
      <span
        class="m-design-radio-button m-design-radio-button-checked"
      >
        <input
          checked=""
          class="m-design-radio-button-input"
          type="radio"
          value="a"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Hangzhou
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="b"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Shanghai
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="c"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Beijing
      </span>
    </label>
    <label
      class="m-design-radio-button-wrapper"
    >
      <span
        class="m-design-radio-button"
      >
        <input
          class="m-design-radio-button-input"
          type="radio"
          value="d"
        />
        <span
          class="m-design-radio-button-inner"
        />
      </span>
      <span>
        Chengdu
      </span>
    </label>
  </div>,
]
`;
